--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
