--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "moment": "^2.29.4",
     "react": "^17.0.1",
